# happy-gardenpi-protocol

./: .gitignore  CMakeLists.txt  Changelog.md  Doxyfile.dox  LICENSE  README.md  config.h.in
docs/html/: _c_r_c_8h.html  _c_r_c_8h_source.html  _doxyfile_8dox.html  _g_mock_faq.html  _g_mock_for_dummies.html  _r_e_a_d_m_e_8md.html  aggregation_8hpp.html  aggregation_8hpp_source.html  annotated.html  certificate_8hpp.html  certificate_8hpp_source.html  class_bar_environment-members.html  class_bar_environment.html  class_base-members.html  class_base.html  class_biggest_int_convertible-members.html  class_biggest_int_convertible.html  class_c_r_c-members.html  class_c_r_c.html  class_child_class_with_stream_operator.html  class_child_class_without_stream_operator.html  class_comment_test.html  class_common_test-members.html  class_common_test.html  class_container_test-members.html  class_container_test.html  class_conversion_helper_base.html  class_conversion_helper_derived.html  class_counter-members.html  class_counter.html  class_custom_function_naming_test-members.html  class_custom_function_naming_test.html  class_custom_functor_naming_test-members.html  class_custom_functor_naming_test.html  class_custom_integer_naming_test-members.html  class_custom_integer_naming_test.html  class_custom_lambda_naming_test-members.html  class_custom_lambda_naming_test.html  class_custom_struct_naming_test.html  class_derived_test-members.html  (+1082 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_17.js  classes_18.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  (+64 more)
include/: config.h
include/hgardenpi-protocol/: config.h  constants.hpp  head.hpp  protocol.hpp
include/hgardenpi-protocol/utilities/: numberutils.hpp  stringutils.hpp
include/hgardenpi-protocol/utils/: shiftutils.hpp  stringutils.hpp
src/: head.cpp  protocol.cpp
src/3thparts/libcrc/: crc16.c  crc8.c  crcccitt.c  crcdnp.c  crckrmit.c  crcsick.c  nmea-chk.c
src/utilities/: stringutils.cpp
src/utils/: shiftutils.cpp  stringutils.cpp
test/: protocoltest.cpp  sendtest.cpp  test.cpp
